[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
oqs = "0.10"
dotenvy = "0.15"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = { version = "0.5", features = ["limit"] }
async-trait = "0.1"
rand = "0.8"
tower-http = { version = "0.5", features = ["limit", "trace"] }
cx


